@startuml
title Calisia - model domenowy
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontColor #1F2937
skinparam ArrowColor #457B9D
skinparam ArrowThickness 1.2
skinparam RoundCorner 10
skinparam titleFontColor #1D3557
skinparam titleFontSize 22
skinparam class {
  BackgroundColor #F7F9FC
  BorderColor #457B9D
  HeaderBackgroundColor #EAF3FB
  FontColor #1F2937
}
skinparam enum {
  BackgroundColor #FFF4D6
  BorderColor #C48A2C
}

class Customer {
  +CustomerId Id
  +FullName Name
  +Email Email
  +CustomerType Type
  +CreatedAtUtc
}

abstract class Product {
  +Guid Id
  +CustomerId CustomerId
  +string ProductName
  +string ProductNumber
  +long NumberSequence
  +Money Balance
  +string Currency
  +ProductCategory Category
  +ProductStatus Status
  +bool? MainAccount
  +MarkDeleted()
}

class BankAccount {
  +AccountNumber AccountNumber
  +BankAccountType AccountType
  +Deposit(amount,title)
  +Withdraw(amount,title)
}

class Card {
  +CardType CardType
  +decimal? CreditLimit
  +GetUsedCreditLimit()
  +Deposit(amount,title)
  +Withdraw(amount,title)
}

class Loan {
  +LoanType LoanType
}

class Transfer {
  +TransferId Id
  +TransferType TransferType
  +Guid SourceAccountId
  +Guid? TargetAccountId
  +decimal Amount
  +TransferStatus Status
}

class TransactionEntry {
  +TransactionId Id
  +Guid BankAccountId
  +TransactionType Type
  +Money Amount
  +string Title
}

class Money {
  +decimal Amount
  +string Currency
  +Add()
  +Subtract()
}

Customer "1" o-- "*" Product
Product <|-- BankAccount
Product <|-- Card
Product <|-- Loan
BankAccount "1" o-- "*" TransactionEntry
Transfer --> BankAccount : zrodlo
Transfer --> Product : cel opcjonalny
Product --> Money
TransactionEntry --> Money

enum ProductCategory {
  BankAccount
  Card
  Loan
}
enum CardType {
  Debit
  Credit
}
enum LoanType {
  Cash
  Consumer
}
enum TransferType {
  Own
  External
}
@enduml
